RESOLVED FIXED46166
Web Inspector: Elements panel does not reflect changes in the text node values.
https://bugs.webkit.org/show_bug.cgi?id=46166
Summary Web Inspector: Elements panel does not reflect changes in the text node values.
Pavel Feldman
Reported 2010-09-21 00:06:46 PDT
Should be fairly easy to fix. We now do direct calls to inspector instead of using dom listeners.
Attachments
[PATCH] Proposed change. (27.02 KB, patch)
2010-09-21 09:21 PDT, Pavel Feldman
yurys: review+
[PATCH] Change to land. (13.70 KB, patch)
2010-09-21 10:20 PDT, Pavel Feldman
no flags
Pavel Feldman
Comment 1 2010-09-21 09:21:22 PDT
Created attachment 68248 [details] [PATCH] Proposed change.
Yury Semikhatsky
Comment 2 2010-09-21 09:36:49 PDT
Comment on attachment 68248 [details] [PATCH] Proposed change. View in context: https://bugs.webkit.org/attachment.cgi?id=68248&action=review > WebCore/dom/CharacterData.cpp:201 > + InspectorController::characterDataModified(this); I'd rather guard this call with #if ENABLED(INSPECTOR) > WebCore/inspector/front-end/DOMAgent.js:391 > + node.textContent = textContent; textContent doesn't seem to be defined here.
Joseph Pecoraro
Comment 3 2010-09-21 09:57:39 PDT
Comment on attachment 68248 [details] [PATCH] Proposed change. View in context: https://bugs.webkit.org/attachment.cgi?id=68248&action=review > WebCore/inspector/InspectorController.h:461 > +#endif This might need an #else with an UNUSED_PARAM(characterData) looking at how its defined.
Pavel Feldman
Comment 4 2010-09-21 10:14:22 PDT
> This might need an #else with an UNUSED_PARAM(characterData) looking at how its defined. Somehow it works just like that for sibling methods...
Pavel Feldman
Comment 5 2010-09-21 10:20:27 PDT
Created attachment 68257 [details] [PATCH] Change to land.
WebKit Commit Bot
Comment 6 2010-09-22 06:03:10 PDT
Comment on attachment 68257 [details] [PATCH] Change to land. Clearing flags on attachment: 68257 Committed r68036: <http://trac.webkit.org/changeset/68036>
WebKit Commit Bot
Comment 7 2010-09-22 06:03:16 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.