WebCore/inspector/InspectorController.cpp
@@ -2131,6 +2131,11 @@ void InspectorController::didModifyDOMAttrImpl(Element* element)
         m_domAgent->didModifyDOMAttr(element);
 }
 
+void InspectorController::characterDataModifiedImpl(CharacterData* characterData)
+{
+    if (m_domAgent)
+        m_domAgent->characterDataModified(characterData);
+}
 
 } // namespace WebCore
 
