WebCore/inspector/InspectorController.h
@@ -29,6 +29,7 @@
 #ifndef InspectorController_h
 #define InspectorController_h
 
+#include "CharacterData.h"
 #include "Console.h"
 #include "Cookie.h"
 #include "Element.h"
@@ -45,6 +46,7 @@
 namespace WebCore {
 
 class CachedResource;
+class CharacterData;
 class ConsoleMessage;
 class Database;
 class Document;
@@ -201,6 +203,7 @@ public:
     static void willRemoveDOMNode(Node*);
     static void willModifyDOMAttr(Element*);
     static void didModifyDOMAttr(Element*);
+    static void characterDataModified(CharacterData*);
 
 #if ENABLE(WORKERS)
     enum WorkerAction { WorkerCreated, WorkerDestroyed };
@@ -338,6 +341,7 @@ private:
     void didRemoveDOMNodeImpl(Node*);
     void willModifyDOMAttrImpl(Element*);
     void didModifyDOMAttrImpl(Element*);
+    void characterDataModifiedImpl(CharacterData*);
 
 #if ENABLE(JAVASCRIPT_DEBUGGER)
     friend class InspectorDebuggerAgent;
@@ -448,6 +452,14 @@ inline void InspectorController::didModifyDOMAttr(Element* element)
 #if ENABLE(INSPECTOR)
     if (InspectorController* inspectorController = inspectorControllerForNode(element))
         inspectorController->didModifyDOMAttrImpl(element);
+#endif
+}
+
+inline void InspectorController::characterDataModified(CharacterData* characterData)
+{
+#if ENABLE(INSPECTOR)
+    if (InspectorController* inspectorController = inspectorControllerForNode(characterData))
+        inspectorController->characterDataModifiedImpl(characterData);
 #endif
 }
 
